--- a/index.html
+++ b/index.html
@@ -146,50 +146,50 @@
     <div class="container">
         <div class="header">
             <div class="profile-image">MP</div>
-            <h1>Your Name</h1>
-            <p class="subtitle">Developer | Designer | Creator</p>
+            <h1>An Nguyen</h1>
+            <p class="subtitle">Developer | Broadcast Producer | Esports Coach </p>
         </div>
 
         <div class="links">
-            <a href="https://github.com/yourusername" class="link-item" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/anguyenwe" class="link-item" target="_blank" rel="noopener noreferrer">
                 <span class="link-icon">💻</span>
                 <span class="link-text">GitHub</span>
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="https://linkedin.com/in/yourusername" class="link-item" target="_blank" rel="noopener noreferrer">
+            <a href="https://linkedin.com/in/anguyenwe" class="link-item" target="_blank" rel="noopener noreferrer">
                 <span class="link-icon">💼</span>
                 <span class="link-text">LinkedIn</span>
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="https://twitter.com/yourusername" class="link-item" target="_blank" rel="noopener noreferrer">
+            <!-- <a href="https://twitter.com/yourusername" class="link-item" target="_blank" rel="noopener noreferrer">
                 <span class="link-icon">🐦</span>
                 <span class="link-text">Twitter</span>
                 <span class="link-arrow">→</span>
-            </a>
+            </a> -->
 
-            <a href="mailto:your.email@example.com" class="link-item">
+            <a href="mailto:anguyenwe@gmail.com" class="link-item">
                 <span class="link-icon">📧</span>
                 <span class="link-text">Email Me</span>
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="https://yourwebsite.com" class="link-item" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.ryanglusphotos.com/Kansas-KO-3" class="link-item" target="_blank" rel="noopener noreferrer">
                 <span class="link-icon">🌐</span>
-                <span class="link-text">Personal Website</span>
+                <span class="link-text">KSKO</span>
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="https://medium.com/@yourusername" class="link-item" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.facebook.com/people/Immanuel-Vietnamese-Baptist-Church/100066625358598/" class="link-item" target="_blank" rel="noopener noreferrer">
                 <span class="link-icon">📝</span>
-                <span class="link-text">Blog</span>
+                <span class="link-text">IVBC</span>
                 <span class="link-arrow">→</span>
             </a>
         </div>
 
         <div class="footer">
-            <p>© 2025 Your Name. All rights reserved.</p>
+            <p>© 2025 An Nguyen. All rights reserved.</p>
         </div>
     </div>
 </body>
