--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="profile-image">MP</div>
+            <div class="profile-image">AN</div>
             <h1>An Nguyen</h1>
             <p class="subtitle">Developer | Broadcast Producer | Esports Coach </p>
         </div>
