Modify subtitle and added more links

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="header">
             <div class="profile-image">AN</div>
             <h1>An Nguyen</h1>
-            <p class="subtitle">Developer | Broadcast Producer | Esports Coach </p>
+            <p class="subtitle">Developer | Broadcast Producer | WFGC TO </p>
         </div>
 
         <div class="links">
@@ -164,7 +164,7 @@
             </a>
 
             <!-- <a href="https://twitter.com/yourusername" class="link-item" target="_blank" rel="noopener noreferrer">
-                <span class="link-icon">🐦</span>
+                <span class="link-icon">🐦📝</span>
                 <span class="link-text">Twitter</span>
                 <span class="link-arrow">→</span>
             </a> -->
@@ -177,12 +177,30 @@
 
             <a href="https://www.ryanglusphotos.com/Kansas-KO-3" class="link-item" target="_blank" rel="noopener noreferrer">
                 <span class="link-icon">🌐</span>
-                <span class="link-text">KSKO</span>
+                <span class="link-text">KSKO Pictures</span>
                 <span class="link-arrow">→</span>
             </a>
 
+            <a href="https://www.youtube.com/watch?v=MaNNAhbEOlk&list=PLtms4Uhs9xOlOJS9k8Ich-oYJ49g-PDVz&index=11" class="link-item" target="_blank" rel="noopener noreferrer">
+                <span class="link-icon">🌐</span>
+                <span class="link-text">KSKO Videos</span>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <a href="https://www.start.gg/tournament/kansas-k-o-3/events" class="link-item" target="_blank" rel="noopener noreferrer">
+                <span class="link-icon">🌐</span>
+                <span class="link-text">KSKO Main Participants</span>
+                <span class="link-arrow">→</span>
+            </a>
+            
+            <a href="https://www.start.gg/tournament/kansas-k-o-3-community-tournaments/events" class="link-item" target="_blank" rel="noopener noreferrer">
+                <span class="link-icon">🌐</span>
+                <span class="link-text">KSKO Community Participants</span>
+                <span class="link-arrow">→</span>
+            </a>
+            
             <a href="https://www.facebook.com/people/Immanuel-Vietnamese-Baptist-Church/100066625358598/" class="link-item" target="_blank" rel="noopener noreferrer">
-                <span class="link-icon">📝</span>
+                <span class="link-icon">🌐</span>
                 <span class="link-text">IVBC</span>
                 <span class="link-arrow">→</span>
             </a>
