--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional Portfolio - Links and Resources">
-    <title>My Portfolio</title>
+    <title>An's Portfolio</title>
     <style>
         * {
             margin: 0;
